syntax = "proto3";

package net.mocknet.common.v1;

import "google/protobuf/timestamp.proto";

option java_multiple_files = false;
option java_outer_classname = "EnvelopeProto";
option java_package = "net.mocknet.contracts.common.v1";

message Envelope {
  string event_id = 1;
  string event_type = 2;
  google.protobuf.Timestamp occurred_at = 3;
  bytes payload = 4;
}
